apps/backend00/k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend00-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend00-dr
spec:
  host: backend00.backend00-prod.svc.cluster.local
  subsets:
  - name: prod
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend00-vs
spec:
  hosts:
  - "*"
  gateways:
  - backend00-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend00.backend00-prod.svc.cluster.local
        subset: prod
      weight: 100
    - destination:
        host: backend00.backend00-prod.svc.cluster.local
        subset: canary
      weight: 0
